--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 
-    <title>Desarollo Web</title>
+    <title data-translate="servicePageTitle">Desarollo Web</title>
 </head>
 <style>
     @keyframes rotateIn {
@@ -76,31 +76,31 @@
                 <div class="collapse navbar-collapse estilos-navbar" id="navbarNav">
                     <ul class="navbar-nav estilos-navbar nav-underline">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Inicio</a>
+                            <a class="nav-link" href="index.html" data-translate="navInicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="about.html" data-translate="navSobreNosotros">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                                aria-expanded="false" data-translate="navServicios">
                                 Servicios
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="service_desarollo_web.html">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="#">Recursos Humanos</a></li>
-                                <li><a class="dropdown-item" href="#">Capacitacion IT</a></li>
+                                <li><a class="dropdown-item" href="service_desarollo_web.html" data-translate="dropdownDesarrollo">Desarollo Web</a></li>
+                                <li><a class="dropdown-item" href="#" data-translate="dropdownRecursos">Recursos Humanos</a></li>
+                                <li><a class="dropdown-item" href="#" data-translate="dropdownCapacitacion">Capacitacion IT</a></li>
                                 <li></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Trabaja con  <br> Nosotros</a>
+                            <a class="nav-link" href="#" data-translate="navTrabaja">Trabaja con  <br> Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
                         </li>
                         <li>
                             <!--Dropdown btn de idioma-->
@@ -148,16 +148,16 @@
     <section class="desarrollo-web-header">
         <div class="header-content">
             <div class="text-left">
-                <h1>DESAROLLO WEB</h1>
-                <p>Contamos con paquetes desde:</p>
-                <h2>$10,000 MXN</h2>
+                <h1 data-translate="serviceHeaderTitle">DESAROLLO WEB</h1>
+                <p data-translate="serviceHeaderSubtitle">Contamos con paquetes desde:</p>
+                <h2 data-translate="serviceHeaderPrice">$10,000 MXN</h2>
             </div>
             <div class="text-right">
                 <ul>
-                    <li><i class="fa-solid fa-check"></i>Solución a tu medida y presupuesto</li>
-                    <li><i class="fa-solid fa-check"></i>Incrementa tu presencia en Internet</li>
-                    <li><i class="fa-solid fa-check"></i>Conoce tus estadísticas y alcance de tu sitio</li>
-                    <li><i class="fa-solid fa-check"></i>Eleva tu marca al siguiente nivel</li>
+                    <li><i class="fa-solid fa-check"></i><span data-translate="serviceHeaderBenefit1">Solución a tu medida y presupuesto</span></li>
+                    <li><i class="fa-solid fa-check"></i><span data-translate="serviceHeaderBenefit2">Incrementa tu presencia en Internet</span></li>
+                    <li><i class="fa-solid fa-check"></i><span data-translate="serviceHeaderBenefit3">Conoce tus estadísticas y alcance de tu sitio</span></li>
+                    <li><i class="fa-solid fa-check"></i><span data-translate="serviceHeaderBenefit4">Eleva tu marca al siguiente nivel</span></li>
                 </ul>
             </div>
         </div>
@@ -166,7 +166,7 @@
     <section>
         <div class="container-lg">
             <div class="section-title">
-                <h1>Conoce Nuestros Paquetes</h1>
+                <h1 data-translate="servicePackagesTitle">Conoce Nuestros Paquetes</h1>
             </div>
             <div class="row justify-content-center mt-1">
 
@@ -174,24 +174,24 @@
                 <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center">
                     <div class="pricing-card" id="negocios-pequeños">
                         <img src="img/web-service/negocios_pequenos.png" alt="Paquete Negocios Pequeños">
-                        <h2>NEGOCIOS PEQUEÑOS</h2>
-                        <div class="price">DESDE $10,000 MXN</div>
+                        <h2 data-translate="packageSmallBusinessTitle">NEGOCIOS PEQUEÑOS</h2>
+                        <div class="price" data-translate="packageSmallBusinessPrice">DESDE $10,000 MXN</div>
                         <ul>
-                            <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt=""
+                            <li><span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span> <img src="icons/check_icon.svg" alt=""
                                     class="icon-check-hospedaje"></li>
-                            <li>Sin Sitio<br> Multibilingüe Simple <img src="icons/ban_icon.svg" alt=""
+                            <li><span data-translate="packageFeatureMultilingual">Sin Sitio<br> Multibilingüe Simple</span> <img src="icons/ban_icon.svg" alt=""
                                     class="icon-check-multibilingue"></li>
-                            <li>Plataforma Moderna <br> y Funcional <img src="icons/check_icon.svg"
+                            <li><span data-translate="packageFeatureModernPlatform">Plataforma Moderna <br> y Funcional</span> <img src="icons/check_icon.svg"
                                     class="icon-check-mdnpequeña"></li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li>Sitio de 1 Sola Página <img src="icons/paginas_web.svg" alt=""
+                                <li><span data-translate="packageFeatureOnePage">Sitio de 1 Sola Página</span> <img src="icons/paginas_web.svg" alt=""
                                         class="icon-check-info"></li>
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="#" class="cta-button">Más Información!</a>
+                            <a href="#" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -199,24 +199,24 @@
                 <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center">
                     <div class="pricing-card" id="empresas-medianas">
                         <img src="img/web-service/empresas_medianas.png" alt="Paquete Empresas Medianas">
-                        <h2>EMPRESAS MEDIANAS</h2>
-                        <div class="price">DESDE $20,000 a $40,000 MXN</div>
+                        <h2 data-translate="packageMediumBusinessTitle">EMPRESAS MEDIANAS</h2>
+                        <div class="price" data-translate="packageMediumBusinessPrice">DESDE $20,000 a $40,000 MXN</div>
                         <ul>
-                            <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt=""
+                            <li><span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span> <img src="icons/check_icon.svg" alt=""
                                     class="icon-check-hospedaje"></li>
-                            <li>Plataforma Moderna <br> y Funcional <img src="icons/check_icon.svg"
+                            <li><span data-translate="packageFeatureModernPlatform">Plataforma Moderna <br> y Funcional</span> <img src="icons/check_icon.svg"
                                     class="icon-check-mdnfuncional"></li>
-                            <li class="alinear-texto">Sin Sitio <br> Multilingüe Simple <img src="icons/info_icon.svg"
+                            <li class="alinear-texto"><span data-translate="packageFeatureMultilingual">Sin Sitio <br> Multilingüe Simple</span> <img src="icons/info_icon.svg"
                                     class="icon-check" data-bs-toggle="tooltip" title="Costo Extra"></li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li>Sitio de 4 a 8 Páginas <img src="icons/info_icon.svg" alt="" class="icon-check-info"
+                                <li><span data-translate="packageFeatureFourToEightPages">Sitio de 4 a 8 Páginas</span> <img src="icons/info_icon.svg" alt="" class="icon-check-info"
                                         data-bs-toggle="tooltip" title="+8 páginas costo extra"></li>
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="#" class="cta-button">Más Información!</a>
+                            <a href="#" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -225,26 +225,26 @@
                 <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-center">
                     <div class="pricing-card" id="empresas-grandes">
                         <img src="img/web-service/empresas_grandes_corporativos.png" alt="Paquete Empresas Grandes">
-                        <h2>EMPRESAS GRANDES O CORPORATIVOS</h2>
-                        <div class="price">DESDE $50,000 a $140,000 MXN</div>
+                        <h2 data-translate="packageLargeBusinessTitle">EMPRESAS GRANDES O CORPORATIVOS</h2>
+                        <div class="price" data-translate="packageLargeBusinessPrice">DESDE $50,000 a $140,000 MXN</div>
                         <ul>
-                            <li>Hospedaje por 2 AÑOS <img src="icons/check_icon.svg" alt=""
+                            <li><span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span> <img src="icons/check_icon.svg" alt=""
                                     class="icon-check-empgrandes-hospedaje"></li>
-                            <li>Plataforma Moderna y Funcional <img src="icons/check_icon.svg" alt=""
+                            <li><span data-translate="packageFeatureModernPlatform">Plataforma Moderna y Funcional</span> <img src="icons/check_icon.svg" alt=""
                                     class="icon-check-empgrandes"></li>
-                            <li>Sin Sitio Multilingüe Simple <img src="icons/info_icon.svg"
+                            <li><span data-translate="packageFeatureMultilingual">Sin Sitio Multilingüe Simple</span> <img src="icons/info_icon.svg"
                                     class="icon-check-empgrandes-bilingue" data-bs-toggle="tooltip" title="Costo Extra">
                             </li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li>Más de 8 Páginas <br>en el Sitio <img src="icons/info_icon.svg" alt=""
+                                <li><span data-translate="packageFeatureMoreThanEightPages">Más de 8 Páginas <br>en el Sitio</span> <img src="icons/info_icon.svg" alt=""
                                         class="icon-check-empgrnd" data-bs-toggle="tooltip"
                                         title="Personalizacion Extra"></li>
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="#" class="cta-button">Más Información!</a>
+                            <a href="#" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -256,16 +256,16 @@
     <section>
         <div class="container-lg">
             <div class="section-title valores-title">
-                <h1>Portafolio Web</h1>
+                <h1 data-translate="portfolioWebTitle">Portafolio Web</h1>
             </div>
             <div class="portafolio-container" data-aos="zoom-in-up">
                 <div class="portafolio-title">
                     <h2>27</h2>
-                    <h3>Clientes <br> Satisfechos</h3>
+                    <h3 data-translate="portfolioClientsSatisfied">Clientes <br> Satisfechos</h3>
                 </div>
                 <div class="portafolio-title">
                     <h2>10</h2>
-                    <h3>Años de <br>Experiencia</h3>
+                    <h3 data-translate="portfolioYearsExperience">Años de <br>Experiencia</h3>
                 </div>
                 <div class="portafolio-title idioma-hover">
                     <div class="number">
@@ -277,7 +277,7 @@
                         <img src="icons/bandera_jpn.png" class="idioma-flag flag-jpn animate__animated"
                             data-animation="animate__fadeInRight" />
                     </div>
-                    <h3>Idiomas</h3>
+                    <h3 data-translate="portfolioLanguages">Idiomas</h3>
                 </div>
                 <div class="portafolio-title country-hover">
                     <div class="number">
@@ -287,7 +287,7 @@
                         <img src="icons/bandera_jpn.png" class="flag flag-japan animate__animated" />
 
                     </div>
-                    <h3>Paises</h3>
+                    <h3 data-translate="portfolioCountries">Paises</h3>
                 </div>
                 <div class="portafolio-title clientes-hover">
                     <div class="number">
@@ -302,7 +302,7 @@
                         <img src="icons/bandera_australia.png" class="flag flag-australia animate_animated">
                         <img src="icons/bandera_italia.png" class="flag flag-italia animate_animated">
                     </div>
-                    <h3>Clientes</h3>
+                    <h3 data-translate="portfolioClients">Clientes</h3>
                 </div>
             </div>
     </section>
@@ -313,14 +313,14 @@
 
             <!-- Portfolio Filters -->
             <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-                <li data-filter="*" class="filter-active">Todas</li>
-                <li data-filter=".filter-barberia">Belleza</li>
-                <li data-filter=".filter-arquitectura">Arquitectura</li>
-                <li data-filter=".filter-seguridad">Seguridad</li>
-                <li data-filter=".filter-restaurantes">Alimentos</li>
-                <li data-filter=".filter-doctores">Salud</li>
-                <li data-filter=".filter-abogados">Abogados</li>
-                <li data-filter=".filter-auto">Automotriz</li>
+                <li data-filter="*" class="filter-active" data-translate="portfolioFilters.all">Todas</li>
+                <li data-filter=".filter-barberia" data-translate="portfolioFilters.beauty">Belleza</li>
+                <li data-filter=".filter-arquitectura" data-translate="portfolioFilters.architecture">Arquitectura</li>
+                <li data-filter=".filter-seguridad" data-translate="portfolioFilters.security">Seguridad</li>
+                <li data-filter=".filter-restaurantes" data-translate="portfolioFilters.food">Alimentos</li>
+                <li data-filter=".filter-doctores" data-translate="portfolioFilters.health">Salud</li>
+                <li data-filter=".filter-abogados" data-translate="portfolioFilters.lawyers">Abogados</li>
+                <li data-filter=".filter-auto" data-translate="portfolioFilters.automotive">Automotriz</li>
             </ul><!-- End Portfolio Filters -->
 
             <!-- Barberia Item -->
@@ -641,11 +641,11 @@
                         <p>@giseamex@gmail.com</p>
                     </div>
                     <ul class="footer-links">
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="#servicios">Servicios</a></li>
-                        <li><a href="#clientes">Contacto</a></li>
-                        <li><a href="#contacto">Carrers</a></li>
-                        <li><a href="#contacto">Blog</a></li>
+                        <li><a href="" data-translate="footerInicio">Inicio</a></li>
+                        <li><a href="#servicios" data-translate="footerServicios">Servicios</a></li>
+                        <li><a href="#clientes" data-translate="footerContacto">Contacto</a></li>
+                        <li><a href="#contacto" data-translate="footerCarrers">Carrers</a></li>
+                        <li><a href="#contacto" data-translate="footerBlog">Blog</a></li>
                     </ul>
                     <div class="footer-social">
                         <a href="" alt="instagram" class="red-social-footer">
