--- a/about.html
+++ b/about.html
@@ -36,31 +36,31 @@
                 <div class="collapse navbar-collapse estilos-navbar" id="navbarNav">
                     <ul class="navbar-nav estilos-navbar nav-underline">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Inicio</a>
+                            <a class="nav-link" href="index.html" data-translate="navInicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="about.html" data-translate="navSobreNosotros">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                                aria-expanded="false" data-translate="navServicios">
                                 Servicios
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="service_desarollo_web.html">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="#">Recursos Humanos</a></li>
-                                <li><a class="dropdown-item" href="#">Capacitacion IT</a></li>
+                                <li><a class="dropdown-item" href="service_desarollo_web.html" data-translate="dropdownDesarrollo">Desarollo Web</a></li>
+                                <li><a class="dropdown-item" href="#" data-translate="dropdownRecursos">Recursos Humanos</a></li>
+                                <li><a class="dropdown-item" href="#" data-translate="dropdownCapacitacion">Capacitacion IT</a></li>
                                 <li></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Trabaja con  <br> Nosotros</a>
+                            <a class="nav-link" href="#" data-translate="navTrabaja">Trabaja con  <br> Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
                         </li>
                         <li>
                             <!--Dropdown btn de idioma-->
@@ -109,8 +109,8 @@
             <img src="img/Header-About Us.png" class="img-fluid" alt="About us Imagen">
             <div class="about-header-text" data-aos="fade-right" data-aos-anchor-placement="top-bottom"
                 data-aos-duration="1500">
-                <h1>Sobre Nosotros</h1>
-                <h1>Conoce nuestro stack de Tecnologias</h1>
+                <h1 data-translate="aboutHeaderTitle1">Sobre Nosotros</h1>
+                <h1 data-translate="aboutHeaderTitle2">Conoce nuestro stack de Tecnologias</h1>
             </div>
         </div>
     </div>
@@ -132,7 +132,7 @@
                         </div>
                         <!-- Usage Circle -->
                         <div class="usage-section">
-                            <h3 class="section-title-card-tech">Uso Mundial</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle">
                                 <span class="usage-text">100%</span>
                             </div>
@@ -143,7 +143,7 @@
 
                         <!-- Used By Section -->
                         <div class="used-by-section">
-                            <h3 class="section-title-card-tech">Usado en:</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths -->
                                 <img src="svgs/google-Logo.svg" alt="Google" class="brand-icon">
@@ -170,7 +170,7 @@
                         </div>
                         <!-- Usage Circle -->
                         <div class="usage-section">
-                            <h3 class="section-title-card-tech">Uso Mundial</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle">
                                 <span class="usage-text">100%</span>
                             </div>
@@ -181,7 +181,7 @@
 
                         <!-- Used By Section -->
                         <div class="used-by-section">
-                            <h3 class="section-title-card-tech">Usado en:</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths -->
                                 <img src="svgs/Spotify.Logo.svg" alt="Spotify" class="brand-icon">
@@ -208,7 +208,7 @@
                         </div>
                         <!-- Usage Circle -->
                         <div class="usage-section">
-                            <h3 class="section-title-card-tech">Uso Mundial</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle-css3">
                                 <span class="usage-text">100%</span>
                             </div>
@@ -217,7 +217,7 @@
                         <h2 class="card-title">CSS3 Y SASS</h2>
                         <!-- Used By Section -->
                         <div class="used-by-section">
-                            <h3 class="section-title-card-tech">Usado en:</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths -->
                                 <img src="svgs/microsoft-logo.svg" alt="Microsoft" class="brand-icon">
@@ -244,7 +244,7 @@
                         </div>
                         <!-- Usage Circle -->
                         <div class="usage-section">
-                            <h3 class="section-title-card-tech">Uso Mundial</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle-bootstrap">
                                 <span class="usage-text">60%</span>
                             </div>
@@ -253,7 +253,7 @@
                         <h2 class="card-title">Bootstrap</h2>
                         <!-- Used By Section -->
                         <div class="used-by-section">
-                            <h3 class="section-title-card-tech">Usado en:</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths-->
                                 <img src="svgs/logo_nasa.svg" alt="NASA" class="brand-icon" style="width: 40px;">
@@ -281,7 +281,7 @@
                         </div>
                         <!-- Usage Circle -->
                         <div class="usage-section">
-                            <h3 class="section-title-card-tech">Uso Mundial</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle-git-github">
                                 <span class="usage-text">95%</span>
                             </div>
@@ -290,7 +290,7 @@
                         <h2 class="card-title">Git y Github</h2>
                         <!-- Used By Section -->
                         <div class="used-by-section">
-                            <h3 class="section-title-card-tech">Usado en:</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths-->
                                 <img src="svgs/microsoft-logo.svg" alt="Microsoft" class="brand-icon" style="width: 40px;">
@@ -321,14 +321,14 @@
                         
                          <!-- Usage Circle -->
                         <div class="usage-section">
-                            <h3 class="section-title-card-tech">Uso Mundial</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle-laravel">
                                 <span class="usage-text">80%</span>
                             </div>
                         </div>
                         <!-- Used By Section -->
                         <div class="used-by-section">
-                            <h3 class="section-title-card-tech">Usado en:</h3>
+                            <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths -->
                                 <img src="svgs/logo_BBC.svg" alt="BBC News" class="brand-icon">
@@ -352,35 +352,35 @@
     <section>
         <div class="container-lg">
             <div class="section-title valores-title">
-                <h1>Nuestros Valores Fundamentales</h1>
+                <h1 data-translate="aboutValoresTitle">Nuestros Valores Fundamentales</h1>
             </div>
             <div class="valores-container" data-aos="zoom-in-up">
                 <div class="valor-title">
-                    <h2>Honestidad</h2>
+                    <h2 data-translate="valorHonestidad">Honestidad</h2>
                     <img src="svgs/about_us_icons/honestidad_logo.svg" alt="Honestidad" class="valor-icon honestidad-icon">
                 </div>
                 <div class="valor-title">
-                    <h2>Respeto</h2>
-                    <img src="svgs/about_us_icons/respeto_logo.svg" alt="Respeto" class="valor-icon">
+                    <h2 data-translate="valorRespeto">Respeto</h2>
+                    <img src="svgs/about_us_icons/respeto_logo.svg" alt="Respeto" class="valor-icon respeto-icon">
                 </div>
                 <div class="valor-title">
-                    <h2>Calidad</h2>
-                    <img src="svgs/about_us_icons/calidad_logo.svg" alt="Calidad" class="valor-icon">
+                    <h2 data-translate="valorCalidad">Calidad</h2>
+                    <img src="svgs/about_us_icons/calidad_logo.svg" alt="Calidad" class="valor-icon calidad-icon">
                 </div>
                 <div class="valor-title">
-                    <h2>Responsabilidad</h2>
+                    <h2 data-translate="valorResponsabilidad">Responsabilidad</h2>
                     <img src="svgs/about_us_icons/responsabilidad_logo.svg" alt="Responsabilidad" class="valor-icon responsabilidad-icon">
                 </div>
         </div>
         <!---MISION Y VISION -->
         <div class="mision-vision-container" data-aos="fade-up">
             <div class="mision-card">
-                <h2>MISIÓN</h2>
-                <p>Desarrollar productos y servicios de calidad, prestando atención a los resultados precisos que nuestro cliente pretende obtener para ganarse su confianza.</p>
+                <h2 data-translate="misionTitle">MISIÓN</h2>
+                <p data-translate="misionText">Desarrollar productos y servicios de calidad, prestando atención a los resultados precisos que nuestro cliente pretende obtener para ganarse su confianza.</p>
             </div>
             <div class="vision-card">
-                <h2>VISIÓN</h2>
-                <p>Queremos ser una marca reconocida por hacer crecer las marcas de nuestros clientes, no sólo en ventas sino también acompañándoles en la transformación tecnológica que evoluciona día a día en las empresas de cualquier tipo y al mismo tiempo ser una marca reconocida en todo el mundo por ello.</p>
+                <h2 data-translate="visionTitle">VISIÓN</h2>
+                <p data-translate="visionText">Queremos ser una marca reconocida por hacer crecer las marcas de nuestros clientes, no sólo en ventas sino también acompañándoles en la transformación tecnológica que evoluciona día a día en las empresas de cualquier tipo y al mismo tiempo ser una marca reconocida en todo el mundo por ello.</p>
             </div>
         </div>
     </div>
@@ -389,7 +389,7 @@
     <section>
         <div class="container-lg">
             <div class="section-title">
-                <h1>Clientes</h1>
+                <h1 data-translate="titleClientes">Clientes</h1>
             </div>
             <div class="container text-center my-5">
                 <div class="row justify-content-center">
@@ -492,11 +492,11 @@
                     <p>@giseamex@gmail.com</p>
                 </div>
                 <ul class="footer-links">
-                    <li><a href="">Inicio</a></li>
-                    <li><a href="#servicios">Servicios</a></li>
-                    <li><a href="#clientes">Contacto</a></li>
-                    <li><a href="#contacto">Carrers</a></li>
-                    <li><a href="#contacto">Blog</a></li>
+                    <li><a href="" data-translate="footerInicio">Inicio</a></li>
+                    <li><a href="#servicios" data-translate="footerServicios">Servicios</a></li>
+                    <li><a href="#clientes" data-translate="footerContacto">Contacto</a></li>
+                    <li><a href="#contacto" data-translate="footerCarrers">Carrers</a></li>
+                    <li><a href="#contacto" data-translate="footerBlog">Blog</a></li>
                 </ul>
                 <div class="footer-social">
                     <a href="" alt="instagram" class="red-social-footer">
