Agregando ya los cambios de idioma correctamente

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -50,7 +50,7 @@
 }
 .rotate-0 {
     animation: rotateOut 0.5s ease-in-out forwards !important;
-}   
+}
 </style>
 <body>
     <header class="fixed-top">
@@ -177,17 +177,33 @@
                         <h2 data-translate="packageSmallBusinessTitle">NEGOCIOS PEQUEÑOS</h2>
                         <div class="price" data-translate="packageSmallBusinessPrice">DESDE $10,000 MXN</div>
                         <ul>
-                            <li><span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span> <img src="icons/check_icon.svg" alt=""
-                                    class="icon-check-hospedaje"></li>
-                            <li><span data-translate="packageFeatureMultilingual">Sin Sitio<br> Multibilingüe Simple</span> <img src="icons/ban_icon.svg" alt=""
-                                    class="icon-check-multibilingue"></li>
-                            <li><span data-translate="packageFeatureModernPlatform">Plataforma Moderna <br> y Funcional</span> <img src="icons/check_icon.svg"
-                                    class="icon-check-mdnpequeña"></li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span>
+                                </div>
+                                <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureMultilingual">Sin Sitio <br> Multibilingüe Simple</span>
+                                </div>
+                                <img src="icons/ban_icon.svg" alt="" class="icon-check-multibilingue">
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureModernPlatform">Plataforma Moderna <br> y Funcional</span>
+                                </div>
+                                <img src="icons/check_icon.svg" class="icon-check-mdnpequeña">
+                            </li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li><span data-translate="packageFeatureOnePage">Sitio de 1 Sola Página</span> <img src="icons/paginas_web.svg" alt=""
-                                        class="icon-check-info"></li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="feature-text-container">
+                                        <span data-translate="packageFeatureOnePage">Sitio de 1 Sola Página</span>
+                                    </div>
+                                    <img src="icons/paginas_web.svg" alt="" class="icon-check-info">
+                                </li>
                             </ul>
                         </div>
                         <div class="btn-centro">
@@ -202,17 +218,33 @@
                         <h2 data-translate="packageMediumBusinessTitle">EMPRESAS MEDIANAS</h2>
                         <div class="price" data-translate="packageMediumBusinessPrice">DESDE $20,000 a $40,000 MXN</div>
                         <ul>
-                            <li><span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span> <img src="icons/check_icon.svg" alt=""
-                                    class="icon-check-hospedaje"></li>
-                            <li><span data-translate="packageFeatureModernPlatform">Plataforma Moderna <br> y Funcional</span> <img src="icons/check_icon.svg"
-                                    class="icon-check-mdnfuncional"></li>
-                            <li class="alinear-texto"><span data-translate="packageFeatureMultilingual">Sin Sitio <br> Multilingüe Simple</span> <img src="icons/info_icon.svg"
-                                    class="icon-check" data-bs-toggle="tooltip" title="Costo Extra"></li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span>
+                                </div>
+                                <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureModernPlatform">Plataforma Moderna <br> y Funcional</span>
+                                </div>
+                                <img src="icons/check_icon.svg" class="icon-check-mdnfuncional">
+                            </li>
+                            <li class="alinear-texto d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureMultilingual">Sin Sitio <br> Multilingüe Simple</span>
+                                </div>
+                                <img src="icons/info_icon.svg" class="icon-check" data-bs-toggle="tooltip" title="Costo Extra">
+                            </li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li><span data-translate="packageFeatureFourToEightPages">Sitio de 4 a 8 Páginas</span> <img src="icons/info_icon.svg" alt="" class="icon-check-info"
-                                        data-bs-toggle="tooltip" title="+8 páginas costo extra"></li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="feature-text-container">
+                                        <span data-translate="packageFeatureFourToEightPages">Sitio de 4 a 8 Páginas</span>
+                                    </div>
+                                    <img src="icons/info_icon.svg" alt="" class="icon-check-info" data-bs-toggle="tooltip" title="+8 páginas costo extra">
+                                </li>
                             </ul>
                         </div>
                         <div class="btn-centro">
@@ -228,19 +260,33 @@
                         <h2 data-translate="packageLargeBusinessTitle">EMPRESAS GRANDES O CORPORATIVOS</h2>
                         <div class="price" data-translate="packageLargeBusinessPrice">DESDE $50,000 a $140,000 MXN</div>
                         <ul>
-                            <li><span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span> <img src="icons/check_icon.svg" alt=""
-                                    class="icon-check-empgrandes-hospedaje"></li>
-                            <li><span data-translate="packageFeatureModernPlatform">Plataforma Moderna y Funcional</span> <img src="icons/check_icon.svg" alt=""
-                                    class="icon-check-empgrandes"></li>
-                            <li><span data-translate="packageFeatureMultilingual">Sin Sitio Multilingüe Simple</span> <img src="icons/info_icon.svg"
-                                    class="icon-check-empgrandes-bilingue" data-bs-toggle="tooltip" title="Costo Extra">
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureHosting">Hospedaje por 2 AÑOS</span>
+                                </div>
+                                <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureModernPlatform">Plataforma Moderna y Funcional</span>
+                                </div>
+                                <img src="icons/check_icon.svg" alt="" class="icon-check-empgrandes">
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="feature-text-container">
+                                    <span data-translate="packageFeatureMultilingual">Sin Sitio <br> Multilingüe Simple</span>
+                                </div>
+                                <img src="icons/info_icon.svg" class="icon-check-empgrandes-bilingue" data-bs-toggle="tooltip" title="Costo Extra">
                             </li>
                         </ul>
                         <div class="separator-container">
                             <ul>
-                                <li><span data-translate="packageFeatureMoreThanEightPages">Más de 8 Páginas <br>en el Sitio</span> <img src="icons/info_icon.svg" alt=""
-                                        class="icon-check-empgrnd" data-bs-toggle="tooltip"
-                                        title="Personalizacion Extra"></li>
+                                <li class="d-flex align-items-center justify-content-between">
+                                    <div class="feature-text-container">
+                                        <span data-translate="packageFeatureMoreThanEightPages">Más de 8 Páginas <br>en el Sitio</span>
+                                    </div>
+                                    <img src="icons/info_icon.svg" alt="" class="icon-check-empgrnd" data-bs-toggle="tooltip" title="Personalizacion Extra">
+                                </li>
                             </ul>
                         </div>
                         <div class="btn-centro">
@@ -281,7 +327,7 @@
                 </div>
                 <div class="portafolio-title country-hover">
                     <div class="number">
-                        <h2>5</h2>
+                        <h2>3</h2>
                         <img src="icons/bandera_venezuela.png" class="flag flag-venezuela animate__animated" />
                         <img src="icons/bandera_mex.png" class="flag flag-mexico animate__animated" />
                         <img src="icons/bandera_jpn.png" class="flag flag-japan animate__animated" />
